# oastat_static_web_generator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  run_and_open.sh
.github/workflows/: codeql-analysis.yml
extra/docker/: Dockerfile.Ubuntu16.04.build
src/: command_arguments.hpp  oastat_static_web_generator.cpp
src/common/: common.cpp  common.hpp
src/pages/: common_pages.cpp  game.cpp  index.cpp  map.cpp  pages.hpp
static_content/css/: oastat.css  oastat_d3.css
static_content/js/: player-name-colors.js  score-chart.js  weapon-pie-chart.js
templates/: game.tpl  index.tpl  map.tpl
